# db_cursework

./: README.md  config.py  main.py  pyproject.toml
src/: api.py  db_manager.py  postgres_db.py  user_interaction.py  utils.py  vacancy.py
